--- a/popup/index.html
+++ b/popup/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="styles.css" rel="stylesheet">
     <title>YouTube Education Filter</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
 <h1>YouTube Education Filter</h1>
